objects/Google_Analytic_ID__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>GoogleCode_Id__c</fullName>
        <label>GoogleCode Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_AdditionalSrc__c</fullName>
        <label>Google_AdditionalSrc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_GTM_Auth__c</fullName>
        <label>Google GTM Auth</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_GTM_Preview__c</fullName>
        <label>Google GTM Preview</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Google Analytic ID</label>
</CustomObject>